[feature]: ajout gestion des terre du gouv avec strategie de culture supervisé par ia
